# hellofridge

./: .gitignore  LICENSE  README.md
backend/: create_recipies.py  ingredients.json  main.py  pyproject.toml  recipes.json
frontend/: bun.lockb
frontend/src/: main.js
frontend/src/components/: About.vue  BottomNav.vue  Fridge.vue  IngredientCard.vue  Recipe.vue  RecipeCard.vue  RecipeView.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/store/: app.js
frontend/src/views/: Home.vue
